@@ -7,12 +7,15 @@ fltnum = 3.14
 boolval = true
 intnum = 42
 dattim = 2015-03-28T16:35:01.123456Z
-# does not work:  dat = 2015-03-28Z
+# does now work:  
+dat = 2015-03-28
 
 [dateSection]
 date1 = 1979-05-27T07:32:00Z
 date2 = 1979-05-27T00:32:00-07:00
 date3 = 1979-05-27T00:32:00.999999-07:00
+date4 = 1979-05-27T07:32:00
+date5 = 1979-05-27T07:32:00.999999
 
 
 
