@@ -3,10 +3,17 @@
 \newcommand{\ghpr}{\href{https://github.com/eddelbuettel/rcpptoml/pull/#1}{##1}}
 \newcommand{\ghit}{\href{https://github.com/eddelbuettel/rcpptoml/issues/#1}{##1}}
 
+\section{Changes in version 0.1.1 (2017-xx-yy)}{
+  \itemize{
+    \item Synchronized with ccptoml upstream adding support for local
+    datetime and local date (PR \ghpr{10})
+  }
+}
+
 \section{Changes in version 0.1.0 (2017-01-05)}{
   \itemize{
-    \item Added Windows support by relying on \code{Rcpp::mktime00()} (\ghpr{6}
-    and \ghpr{8} closing \ghit{5} and \ghit{3})
+    \item Added Windows support by relying on \code{Rcpp::mktime00()}
+    (PR s\ghpr{6} and \ghpr{8} closing \ghit{5} and \ghit{3})
     \item Synchronized with \code{cpptoml} upstream (\ghpr{9})
     \item Updated Travis CI support via newer \code{run.sh} 
   }
@@ -14,7 +21,7 @@
 
 \section{Changes in version 0.0.5 (2015-12-19)}{
   \itemize{
-    \item Synchronized with \code{cpptoml} upstream (\ghpr{4})
+    \item Synchronized with \code{cpptoml} upstream (PR \ghpr{4})
     \item Improved and extended examples
   }
 }
